--- a/public/schoolClass/teacherUnionMaster.html
+++ b/public/schoolClass/teacherUnionMaster.html
@@ -122,6 +122,7 @@ video{
 				  -->
 				  <a id="video_source_peizhi" href="javascript:showVideoSourceSelectDialog();" class="operation_menu_t_btn" style="display: none;">视频源配置</a>
 				  <a id="video_srouce_push_rtmp" href="javascript:goPushRtmp();" class="operation_menu_t_btn" style="display: none;">服务端推流</a>
+				  <a id="video_local_record" href="javascript:goLocalRecordPage();" class="operation_menu_t_btn" style="display: none;">客户端录制</a>
 				  <a id="show_talk" href="javascript:showTalkDiv();" class="operation_menu_t_btn" string_id="string_open_taolun" text='打开讨论区' style="display: none;">关闭讨论区</a>
 		          <a id='language_select' href="javascript:changeLanguage();" class="En_icon_i Chinese_icon_i"></a>
 		      </div>
@@ -1207,6 +1208,7 @@ video{
       if(startType == '1_n'){
           $("#video_source_peizhi").show();
           $("#video_srouce_push_rtmp").show();
+          $("#video_local_record").show();
           socketLogin();
 	  }else{
           layer.open({
@@ -1959,6 +1961,10 @@ video{
 
   function goPushRtmp(){
       window.open("serverRecord.html?teacherId="+userId,"SERVER_RECORD");
+  }
+
+  function goLocalRecordPage(){
+      window.open("localRecord.html?teacherId="+userId+"&clazzName="+title);
   }
 
   function hideVideoSourceSelectDialog(){
