--- a/public/schoolClass/syncClassroom.html
+++ b/public/schoolClass/syncClassroom.html
@@ -89,7 +89,7 @@
         $('#classInfo_iframe').attr('src', 'unionClassList.html?teacherId=' + teacherId + '&teacherName=' + teacherName + '');
         $('#classReview_iframe').attr('src', 'classReviewList.html?teacherId=' + teacherId + '&teacherName=' + teacherName + '');
         $('#myFile_iframe').attr('src', 'https://jiaoxue.maaee.com:8099/#/antPlate?ident=' + teacherId + '&fileId=-1&title=蚁盘题目&phoneType=0')
-        $('#localRecord_iframe').attr('src', 'localRecord.html?ident=' + teacherId);
+        $('#localRecord_iframe').attr('src', 'recordList.html?ident=' + teacherId);
 //        $('#myFile_iframe').attr('src', 'http://192.168.50.29:8091/#/antPlate?ident=' + teacherId + '&fileId=-1&title=蚁盘题目&phoneType=0')
 
         //socket 监听
