--- a/public/schoolClass/recordList.html
+++ b/public/schoolClass/recordList.html
@@ -55,19 +55,22 @@ var infos = JSON.parse(localStorage.getItem(teacherId+"_savedVideoInfos")) || []
 //    clazzName:'常规课',
 //    fileName:'文件名',
 //    createTime:1543827957472,
-//    filePath:'/home/fanbo/视频/26897f6d-7043-4972-8631-ea63420111ca.mp4'
+//    filePath:'/home/fanbo/视频/26897f6d-7043-4972-8631-ea63420111ca.mp4',
+//    size:8
 //},{
 //      id:1,
 //      clazzName:'实景课',
 //      fileName:'文件名',
 //      createTime:1543827957472,
-//      filePath:'/home/fanbo/视频/26897f6d-7043-4972-8631-ea63420111ca.mp4'
+//      filePath:'/home/fanbo/视频/26897f6d-7043-4972-8631-ea63420111ca.mp4',
+//      size:8
 //},{
 //        id:1,
 //        clazzName:'常规课',
 //        fileName:'文件名',
 //        createTime:1543827957472,
-//        filePath:'/home/fanbo/视频/26897f6d-7043-4972-8631-ea63420111ca.mp4'
+//        filePath:'/home/fanbo/视频/26897f6d-7043-4972-8631-ea63420111ca.mp4',
+//        size:8
 //}]
 var rootDir = localStorage.getItem('rootDir');
 console.log(rootDir);
@@ -84,24 +87,17 @@ function loadFiles(){
 
 
     infos.map((value,index)=>{
-//        console.log(value);
-        var stats = fs.statSync(value.filePath);
-        // console.log(stats,'stats');
-//        console.log(value.clazzName, '文件名称');
-//        console.log((stats.size / 1024 / 1024).toFixed(2), '文件大小');
-//        console.log(stats,'stats');
         var obj = {
             className:value.clazzName?value.clazzName:'',
             fileName: value.fileName?value.fileName:'',
             filePath: value.filePath?value.filePath:'',
             fileDirPath: rootDir?rootDir:'',
             fileTime: datetimeFormat(value.createTime),
-            fileSize: (stats.size / 1024 / 1024).toFixed(2) + 'MB',
+            fileSize: (value.size?value.size:0) + 'MB',
         };
         listArray.push(obj);
-    })
+    });
     $('#dir_input').val(rootDir);
-//    console.log(listArray,'listArray');
 
 
 //    //置空
@@ -141,7 +137,10 @@ function loadFiles(){
 
 
 function openFile(path) {
-    console.log('打开文件');
+
+//    console.log('打开文件');
+//    console.log(path);
+    window.open("recordVideoPreview.html?filePath="+path);
 }
 
 function openFolder(path) {
@@ -155,15 +154,15 @@ function openFolder(path) {
  ** 添加对象至list_body元素中
  */
 function appendToList(obj) {
-    var html = '<div class="list_item">' +
-        '<div class="list_bodyItem">' + obj.className + '</div>' +
-        '<div class="list_bodyItem">' + obj.fileName + '</div>' +
-        '<div class="list_bodyItem">' + obj.fileTime + '</div>' +
-        '<div class="list_bodyItem">' + obj.fileSize + '</div>' +
-        '<div class="list_bodyItem">' +
-        '     <button onclick="openFile()">播放</button>' +
+    var html = "<div class='list_item'>" +
+        "<div class='list_bodyItem'>" + obj.className + "</div>"+
+        "<div class='list_bodyItem'>" + obj.fileName + "</div>"+
+        "<div class='list_bodyItem'>" + obj.fileTime + "</div>"+
+        "<div class='list_bodyItem'>" + obj.fileSize + "</div>"+
+        "<div class='list_bodyItem'>" +
+        "    <button onclick='openFile(\""+obj.filePath+"\")'>播放</button>" +
 //        '     <button onclick="openFolder()">打开文件夹</button>' +
-        '</div></div>';
+        "</div></div>";
     $('.list_body').append(html);
 }
 
