--- a/public/schoolClass/teacherUnionMaster.html
+++ b/public/schoolClass/teacherUnionMaster.html
@@ -1974,7 +1974,7 @@ video{
   }
 
   function goLocalRecordPage(){
-      window.open("localRecord.html?teacherId="+userId+"&clazzName="+title);
+      window.open("localRecord.html?teacherId="+userId+"&clazzName="+title,"SERVER_RECORD");
   }
 
   function hideVideoSourceSelectDialog(){
