--- a/public/schoolClass/recordVideoPreview.html
+++ b/public/schoolClass/recordVideoPreview.html
@@ -23,7 +23,11 @@
 
 <script type="text/javascript">
      var video_element = document.getElementById("video_element");
-     video_element.src = "C:\\Users\\Administrator\\Desktop\\electron\\LitteAntTeaching\\recordVideos\\1543822554914.mp4";
+     //video_element.src = "C:\\Users\\Administrator\\Desktop\\electron\\LitteAntTeaching\\recordVideos\\1543822554914.mp4";
+
+     var filePath = Service.getQueryString("filePath");
+     alert(filePath);
+     video_element.src = filePath;
 
      video_element.onloadedmetadata = function() {
          video_element.onloadedmetadata = null;
