--- a/public/schoolClass/recordList.html
+++ b/public/schoolClass/recordList.html
@@ -51,28 +51,28 @@ var teacherId = Service.getQueryString('ident');
 console.log(teacherId);
 
 var infos = JSON.parse(localStorage.getItem(teacherId+"_savedVideoInfos")) || [];
-var infos = [{
-    id:1,
-    clazzName:'常规课',
-    fileName:'文件名',
-    createTime:1543827957472,
-    filePath:'/home/fanbo/视频/26897f6d-7043-4972-8631-ea63420111ca.mp4',
-    size:8
-},{
-      id:1,
-      clazzName:'实景课',
-      fileName:'文件名',
-      createTime:1543827957472,
-      filePath:'/home/fanbo/视频/26897f6d-7043-4972-8631-ea63420111ca.mp4',
-      size:8
-},{
-        id:1,
-        clazzName:'常规课',
-        fileName:'文件名',
-        createTime:1543827957472,
-        filePath:'/home/fanbo/视频/26897f6d-7043-4972-8631-ea63420111ca.mp4',
-        size:8
-}]
+// var infos = [{
+//     id:1,
+//     clazzName:'常规课',
+//     fileName:'文件名',
+//     createTime:1543827957472,
+//     filePath:'/home/fanbo/视频/26897f6d-7043-4972-8631-ea63420111ca.mp4',
+//     size:8
+// },{
+//       id:1,
+//       clazzName:'实景课',
+//       fileName:'文件名',
+//       createTime:1543827957472,
+//       filePath:'/home/fanbo/视频/26897f6d-7043-4972-8631-ea63420111ca.mp4',
+//       size:8
+// },{
+//         id:1,
+//         clazzName:'常规课',
+//         fileName:'文件名',
+//         createTime:1543827957472,
+//         filePath:'/home/fanbo/视频/26897f6d-7043-4972-8631-ea63420111ca.mp4',
+//         size:8
+// }]
 var rootDir = localStorage.getItem('video_save_folder');
 console.log(rootDir);
 var fileNames = [];
@@ -94,7 +94,7 @@ function loadFiles(){
             filePath: value.filePath?value.filePath:'',
             fileDirPath: rootDir?rootDir:'',
             fileTime: datetimeFormat(value.createTime),
-            fileSize: (value.size?value.size:0) + 'MB',
+            fileSize: (value.size?(value.size / 1024 / 1024).toFixed(2):0) + 'MB',
         };
         listArray.push(obj);
     });
