--- a/public/schoolClass/syncClassroom.html
+++ b/public/schoolClass/syncClassroom.html
@@ -38,8 +38,9 @@
                 <div class="header">课堂管理</div>
                 <div id="classInfo" class="active">课程信息</div>
                 <div id="classReview">课程回顾</div>
-                <div id="localRecord">本地录制</div>
                 <div id="myFile">我的课件</div>
+                <div class="header">课堂录制</div>
+                <div id="localRecord">录制列表</div>
             </div>
             <div class="right_box">
                 <!--课程信息 -->
