--- a/public/schoolClass/syncClassroom.html
+++ b/public/schoolClass/syncClassroom.html
@@ -36,10 +36,10 @@
         <div class="box_cont">
             <div class="left_box">
                 <div class="header">课堂管理</div>
-                <div id="classInfo" class="active">课程信息</div>
+                <div id="classInfo" class="active">正在直播</div>
                 <div id="classReview">课程回顾</div>
                 <div id="myFile">我的课件</div>
-                <div class="header">课堂录制</div>
+                <div class="header">本地录制</div>
                 <div id="localRecord">录制列表</div>
             </div>
             <div class="right_box">
