--- a/public/schoolClass/localRecord.html
+++ b/public/schoolClass/localRecord.html
@@ -15,7 +15,7 @@
     <script type="text/javascript" src="js/platform.js"></script>
     <script type="text/javascript" src="js/socket.io.js"></script>
     <script type="text/javascript" src="js/MultiStreamsMixer.js"></script>
-    <script type="text/javascript" src="js/LocalRecord.js"></script>
+    <script type="text/javascript" src="js/LocalRecord.js?v=1"></script>
 
     <style>
         html,body{
