--- a/public/schoolClass/recordList.html
+++ b/public/schoolClass/recordList.html
@@ -86,7 +86,7 @@ function loadFiles(){
 }
 
 function getDefaultVideoSavePath(){
-    return "C:\\LittleTeachingRecord\\";
+    return "C:\\LittleAntTeachingRecord\\";
 }
 
 /*
