--- a/public/schoolClass/syncClassroom.html
+++ b/public/schoolClass/syncClassroom.html
@@ -40,8 +40,8 @@
                 <div id="classInfo" class="active">正在直播</div>
                 <div id="classReview">课程回顾</div>
                 <div id="myFile">我的课件</div>
-                <div class="header" id="record_tip">本地录制</div>
-                <div id="localRecord" id="record_list">录制列表</div>
+                <div class="header" id="record_tip" style="display: none;">本地录制</div>
+                <div id="localRecord" id="record_list" style="display: none;">录制列表</div>
             </div>
             <div class="right_box">
                 <!--课程信息 -->
